change xLamp, fix alignment issues, revive time

--- a/src/pages/landing/Landing.module.scss
+++ b/src/pages/landing/Landing.module.scss
@@ -125,6 +125,17 @@ body {
         will-change: transform;
         margin-top: clamp(0vh, 100vh - 56.7vw, 100vh);
 
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          height: 80%;
+          background: linear-gradient(to bottom, transparent 0.1%, black);
+          pointer-events: none;
+        }
+
         img {
           width: 100%;
           height: 100%;
@@ -162,15 +173,15 @@ body {
                 grid-row: 1/2;
                 grid-column: 1/2;
                 z-index: 100;
-                height: fit-content;
-                filter: drop-shadow(5px 5px 2px rgba(0, 0, 0, 0.3));
+                height: 30%;
+                filter: drop-shadow(0 5px 2px rgba(0, 0, 0, 0.3));
                 transition: filter 0.1s ease-out;
               }
               .socialLamp {
                 grid-row: 1/2;
                 grid-column: 1/2;
                 z-index: 99;
-                width: 100%;
+                width: 80%;
               }
               &:hover {
                 .socialIcon {
@@ -212,6 +223,17 @@ body {
             }
           }
         }
+      }
+
+      .treeExtender {
+        background-color: black;
+        background-size: cover;
+        background-position: center;
+        width: 100vw;
+        height: 100vh;
+        position: absolute;
+        bottom: 0;
+        left: 0;
       }
     }
 
@@ -271,9 +293,9 @@ body {
 
     .dateCountdown {
       position: fixed;
-      z-index: 0;
-      left: 3svw;
-      bottom: 2.5svw;
+      z-index: 200;
+      right: 10svw;
+      top: 3svw;
       width: 15svw;
       display: flex;
       align-items: center;
